# registration_app

./: .gitignore  LICENSE  README.md
docker/: docker-compose.yml  sample.env
docker/fastapi/: Dockerfile
docker/openldap/: Dockerfile  bootstrap.ldif
docker/vue/: Dockerfile
python/: pyproject.toml
python/registration_app/: __init__.py  authenticate.py  exceptions.py
python/registration_app/api/: __init__.py  main.py  models.py
python/registration_app/orm/: __init__.py  database.py  models.py
typescript/registration_app/: .env  README.md  index.html  package-lock.json  package.json
typescript/registration_app/src/: App.vue  main.ts
typescript/registration_app/src/components/pages/: Login.vue  Profile.vue  Registration.vue
typescript/registration_app/src/router/: index.ts
typescript/registration_app/src/store/: index.ts
